environments/oss/gateway-api-config/base/gateway-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https
  namespace: gloo-system
  labels:
    gateway: https
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.kapoozi.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: cf-upstream-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
